--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -1,4 +1,14 @@
 <div class="row">
+    <div class="large-5 columns">&nbsp;</div>
+    <div class="large-2 columns">
+        <a th:href="@{/}">
+            <img alt="домен спорт" class="header_logo_sreda" src="/img/logo-1.png">
+        </a>
+    </div>
+    <div class="large-5 columns">&nbsp;</div>
+</div>
+
+<!--<div class="row">
     <form id="logoutForm" method="post" th:action="@{/logout}"></form>
     <div class="small-2 large-5 columns" style="padding: 1vh"></div>
     <div class="small-4 large-2 columns">
@@ -13,7 +23,7 @@
         <a id="login" th:href="@{/auth/login}" th:if="${!baseAuth}" style="text-decoration: none; color: black;">ВОЙТИ</a>
         <a id="logout" href="#" onclick="document.getElementById('logoutForm').submit()" th:if="${baseAuth}" style="text-decoration: none; color: black;">ВЫЙТИ</a>
     </div>
-</div>
+</div>-->
 
 
 
