--- a/src/main/resources/templates/content/home-page.html
+++ b/src/main/resources/templates/content/home-page.html
@@ -1,5 +1,154 @@
 <div class="row otstup-verh">
     <div class="large-3 columns">
+        <p class="lead">Ближайшие события</p>
+        <div class="media-object">
+            <div class="media-object-section">
+                <a class="th" href="">
+                    <img class="thumbnail img-anons" src="/img/14.jpg">
+                </a>
+            </div>
+            <div class="media-object-section">
+                <a href="#">
+                    <p class="calendar-gorod">Москва</p>
+                    <p class="calendar-date">14.10.2024-14.10.2024</p>
+                </a>
+                <a href="#">
+                    <h3 class="calendar-title">Чемпионат России по Радиоспорту УКВ имени С.П.Попова</h3>
+                </a>
+            </div>
+        </div>
+        <div class="media-object">
+            <div class="media-object-section">
+                <a class="th" href="#">
+                    <img class="thumbnail img-anons" src="/img/14.jpg">
+                </a>
+            </div>
+            <div class="media-object-section">
+                <a href="#">
+                    <p class="calendar-gorod">Москва</p>
+                    <p class="calendar-date">14.10.2024-14.10.2024</p>
+                </a>
+                <a href="#">
+                    <h3 class="calendar-title">Чемпионат России по Радиоспорту УКВ имени С. П, Попова</h3>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="large-6 columns">
+        <div class="responsive-blog-post">
+            <div class="individual-post">
+                <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-use-m-u-i="false" data-orbit>
+                    <div class="orbit-wrapper">
+                        <div class="orbit-controls">
+                            <button class="orbit-previous">
+                                <span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;
+                            </button>
+                            <button class="orbit-next">
+                                <span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;
+                            </button>
+                        </div>
+                        <ul class="orbit-container">
+                            <li class="is-active orbit-slide">
+                                <figure class="orbit-figure">
+                                    <img class="orbit-image" src="/img/11.jpg" alt="Space">
+                                    <figcaption class="orbit-caption">Space, the final frontier.</figcaption>
+                                </figure>
+                            </li>
+                            <li class="orbit-slide">
+                                <figure class="orbit-figure">
+                                    <img class="orbit-image" src="./img/9.jpg" alt="Space">
+                                    <figcaption class="orbit-caption">Lets Rocket!</figcaption>
+                                </figure>
+                            </li>
+                        </ul>
+                    </div>
+                    <nav class="orbit-bullets">
+                        <button class="is-active" data-slide="0">
+                            <span class="show-for-sr">First slide details.</span>
+                            <span class="show-for-sr" data-slide-active-label>Current Slide</span>
+                        </button>
+                        <button data-slide="1"><span class="show-for-sr">Second slide details.</span></button>
+                        <button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
+                        <button data-slide="3"><span class="show-for-sr">Fourth slide details.</span></button>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="large-3 columns ">
+        <p class="lead">Популярные статьи</p>
+        <div class="media-object">
+            <div class="media-object-section">
+                <a class="th" href="#">
+                    <img class="thumbnail img-anons" src="/img/7.jpg">
+                </a>
+            </div>
+            <div class="media-object-section">
+                <a href="#">
+                    <h3 class="calendar-title">Кедровые орехи помогут вам справиться с голодом</h3>
+                </a>
+                <a href="#">
+                    <h4 class="calendar-date">Силовые тренировки</h4>
+                </a>
+            </div>
+        </div>
+        <div class="media-object">
+            <div class="media-object-section">
+                <a class="th" href="#">
+                    <img class="thumbnail img-anons" src="/img/7.jpg">
+                </a>
+            </div>
+            <div class="media-object-section">
+                <a href="#">
+                    <h3 class="calendar-title">Кедровые орехи помогут вам справиться с голодом</h3>
+                </a>
+                <a href="#">
+                    <h4 class="calendar-date">Силовые тренировки</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="row small-up-3 medium-up-4 large-up-5">
+    <div class="column" th:each="post, stat : ${posts}">
+        <div class="card-flex-article card" style="border: none">
+            <div class="card-image exmpl">
+                <a th:href="@{/read/post/{id}(id=${post.getId()})}">
+                    <img th:src="'/download/' + ${post.getImageId()}">
+                </a>
+            </div>
+            <div class="card-section">
+                <a th:href="@{/read/post/{id}(id=${post.getId()})}">
+                    <h3 class="calendar-title artic" th:text="${post.getAnnotation()}"></h3>
+                </a>
+            </div>
+            <div class="article-details">
+                <a href="#">
+                    <h4 class="calendar-date">Силовые тренировки</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row-100-block">
+    <div class="col-20"></div>
+    <div class="col-60" style="display: flex">
+        <div style="display: block; margin: auto">
+            <a style="border-radius: 5px" class="link-button-simple" th:href="@{/page/0}" th:if="${page > 0}">первая</a>
+            <a class="link-button-simple-2" th:text="${page - 1}" th:href="@{/page/{num}(num=${page - 2})}" th:if="${page > 1}">-2</a>
+            <a class="link-button-simple-2" th:text="${page}" th:href="@{/page/{num}(num=${page - 1})}" th:if="${page > 0}">-1</a>
+            <a class="link-button-simple-2" th:text="${page + 1}" th:href="@{/page/{num}(num=${page})}" style="background: royalblue; color: whitesmoke">текущая</a>
+            <a class="link-button-simple-2" th:text="${page + 2}" th:href="@{/page/{num}(num=${page + 1})}" th:if="${page + 1} <= ${lastPage}">+1</a>
+            <a class="link-button-simple-2" th:text="${page + 3}" th:href="@{/page/{num}(num=${page + 2})}" th:if="${page + 2} <= ${lastPage}">+2</a>
+            <a style="border-radius: 5px" class="link-button-simple" th:href="@{/page/{num}(num=${lastPage})}" th:if="${page} != ${lastPage}">последняя</a>
+        </div>
+    </div>
+    <div class="col-20"></div>
+</div>
+
+<!--<div class="row otstup-verh">
+    <div class="large-3 columns">
         <div class="responsive-blog-post">
             <div class="individual-post">
                 <a th:href="@{/read/post/{id}(id=${posts.get(1).getId()})}" style="text-decoration: none">
@@ -36,7 +185,7 @@
                 </a>
             </div>
             <div class="media-object-section">
-                <!--<img th:each="sportId : ${posts.get(i).getSportTags()}" th:src="'/download/tag/' + ${sportId}" width="24" height="24">-->
+                &lt;!&ndash;<img th:each="sportId : ${posts.get(i).getSportTags()}" th:src="'/download/tag/' + ${sportId}" width="24" height="24">&ndash;&gt;
                 <a th:href="@{/read/post/{id}(id=${posts.get(i).getId()})}" style="text-decoration: none">
                     <h3 class="cover-h2" th:text="${posts.get(i).getName()}"></h3>
                 </a>
@@ -52,9 +201,9 @@
     <div class="row small-up-3 medium-up-4 large-up-5">
         <div class="column" th:each="i : ${#numbers.sequence( 0, 4)}" th:if="${posts.size() >= 4}">
             <div class="card-flex-article">
-                <!--<div class="article-details">
+                &lt;!&ndash;<div class="article-details">
                     <img th:each="sportId : ${posts.get(i).getSportTags()}" th:src="'/download/tag/' + ${sportId}" width="24" height="24">
-                </div>-->
+                </div>&ndash;&gt;
                 <a th:href="@{/read/post/{id}(id=${posts.get(i).getId()})}" style="text-decoration: none">
                     <div class="card-image">
                         <img th:src="'/download/' + ${posts.get(i).getImageId()}">
@@ -67,7 +216,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <!--<div class="row-100-block">
     <div class="col-20"></div>
