--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -19,6 +19,10 @@
         <link href="/css/map.css" rel="stylesheet">
         <script src="/js/map.js" type="text/javascript"></script>
 
+        <!-- select2 -->
+        <link href="https://cdn.jsdelivr.net/npm/motion-ui@1.2.3/dist/motion-ui.min.css" rel="stylesheet"/>
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
+
         <!--main-->
         <!--<link href="/css/grid.css" rel="stylesheet">
         <link href="/css/color-and-align.css" rel="stylesheet">-->
@@ -29,6 +33,7 @@
         <link href="/css/fonts.css" rel="stylesheet">
         <link href="/css/foundation.css" rel="stylesheet">
         <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/normalize.css" rel="stylesheet">
         <script src="/js/app.js" type="text/javascript"></script>
         <script src="/js/foundation.js" type="text/javascript"></script>
         <script src="/js/what-input.js" type="text/javascript"></script>
@@ -49,6 +54,7 @@
         <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
         <div th:insert="~{content/post-page}" th:if="${index} == 'post-page'"></div>
         <div th:insert="~{content/profile-page}" th:if="${index} == 'profile-page'"></div>
+        <div th:insert="~{content/bookmarks-page}" th:if="${index} == 'bookmarks-page'"></div>
 
         <footer th:insert="~{blocks/footer}"></footer>
 
@@ -63,6 +69,7 @@
         <!-- foundation -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.2.3/motion-ui.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script>
             $(document).foundation();
         </script>
