--- a/src/main/resources/static/css/grid.css
+++ b/src/main/resources/static/css/grid.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Play&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Play&display=swap');
 
 * {
     font-family: 'Play', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+}*/
 
 [class*="row-"]{
     display: flex;
