--- a/src/main/resources/templates/content/add-post-page.html
+++ b/src/main/resources/templates/content/add-post-page.html
@@ -1,4 +1,4 @@
-<div class="row-100">
+<div class="row-100" style="background: white">
     <div class="col-20"></div>
     <div class="col-60">
         <div style="display: inline-flex; width: 100%">
