--- a/src/main/resources/templates/content/bookmarks-page.html
+++ b/src/main/resources/templates/content/bookmarks-page.html
@@ -1,7 +1,7 @@
-<div class="row-100" th:if="${posts.size() != 0}">
+<div class="row-100" th:if="${posts.size() != 0}" style="background: white">
   <div class="col-20"></div>
   <div class="col-60" style="padding: 1vh">
-    <div class="flex-container border target" th:each="post,stat:${posts}" style="padding: 1vh; margin-bottom: 1vh">
+    <div class="flex-container target" th:each="post,stat:${posts}" style="padding: 1vh; margin-bottom: 1vh">
       <a th:href="@{/read/post/{id}(id=${post.getId()})}" style="color: black">
         <div class="col-60">
           <div class="row-100">
@@ -19,6 +19,7 @@
   </div>
   <div class="col-20"></div>
 </div>
-<div th:if="${posts.size() == 0}">
-  <p>У вас нету закладок. Добавьте что нибудь.</p>
+
+<div th:if="${posts.size() == 0}" style="background: white; padding: 30.5vh 0">
+  <p style="text-align: center">У вас нету закладок. Добавьте что нибудь.</p>
 </div>
