--- a/src/main/resources/templates/content/edit-post-page.html
+++ b/src/main/resources/templates/content/edit-post-page.html
@@ -1,4 +1,4 @@
-<div class="row-100">
+<div class="row-100" style="background: white">
     <div class="col-20"></div>
     <div class="col-60">
         <div style="display: inline-flex; width: 100%">
@@ -61,8 +61,8 @@
                     </div>
                     <div class="row-100-block" style="padding-top: 2vh">
                         <a th:href="@{/material}" class="link-button-simple">Назад</a>
-                        <input type="submit" value="Обновить" class="input-button" id="inputButtonFake" hidden disabled="disabled" style="border-radius: 10px">
-                        <input type="submit" value="Обновить" class="input-button" id="inputButton" onclick="hiddenControl()" style="border-radius: 10px">
+                        <input type="submit" value="Обновить" class="input-button" id="inputButtonFake" hidden disabled="disabled">
+                        <input type="submit" value="Обновить" class="input-button" id="inputButton" onclick="hiddenControl()">
                         <a th:href="@{/material/post/verify/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleModerator}">Проверенно</a>
                         <a th:href="@{/material/off/verified/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleMainModerator}">Отменить проверку</a>
                         <a th:href="@{/material/post/allowed/{id}(id=${post.getId()})}" class="link-button-simple" th:if="${roleAdmin} or ${roleMainModerator}">Опубликовать</a>
