--- a/src/main/resources/templates/content/profile-page.html
+++ b/src/main/resources/templates/content/profile-page.html
@@ -1,4 +1,4 @@
-<div class="row-100">
+<div class="row-100" style="background: white; padding: 15vh 0">
     <div class="col-20"></div>
     <div class="col-60" style="padding: 10vh 0">
         <div class="col-100 shadow border" style="padding: 1vh; margin-top: 1vh">
