--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -24,8 +24,8 @@
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet"/>
 
         <!--main-->
-        <!--<link href="/css/grid.css" rel="stylesheet">
-        <link href="/css/color-and-align.css" rel="stylesheet">-->
+        <link href="/css/grid.css" rel="stylesheet">
+        <link href="/css/color-and-align.css" rel="stylesheet">
         <script src="/js/reg-checkbox.js" th:inline="javascript"></script>
 
         <!-- foundation -->
