update 09.02.2024 (dd.MM.yyyy) * Working on the slider

--- a/src/main/resources/static/css/grid.css
+++ b/src/main/resources/static/css/grid.css
@@ -92,6 +92,10 @@
     margin: auto;
 }
 
+.flex-right {
+    margin: auto 1vh auto auto;
+}
+
 .my-navbar {
     list-style-type: none;
     margin: 0;
