--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -45,6 +45,7 @@
 
         <div th:insert="~{content/home-page}" th:if="${index} == 'home-page'"></div>
         <div th:insert="~{content/material-page}" th:if="${index} == 'material-page'"></div>
+        <div th:insert="~{content/slider-page}" th:if="${index} == 'slider-page'"></div>
         <div th:insert="~{content/contact-page}" th:if="${index} == 'contact-page'"></div>
         <div th:insert="~{content/admin-page}" th:if="${index} == 'admin-page'"></div>
         <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
